# oaslananka-_-fovux

./: .editorconfig  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  Taskfile.yml  azure-pipelines.yml  mcp.json  release-please-config.json  renovate.json5
.github/: DOPPLER.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.github/rulesets/: main.json  release-tags.json
.github/workflows/: auto-label.yml  branch-cleanup.yml  ci.yml  codeql.yml  commitlint.yml  dependabot-auto-merge.yml  docs-deploy.yml  gitleaks.yml  hadolint.yml  jules-ci-autofix.yml  lint-fast.yml  lock.yml  mirror.yml  mutation.yml  nightly-compat.yml  pr-size.yml  publish-production.yml  release-drafter.yml  release-please.yml  repository-parity.yml  review-thread-gate.yml  scorecard.yml  security.yml  stale.yml  sync-labels.yml  trivy.yml
docs/: README.md  autonomy.md  release-process.md  release.md  repository-operations.md  testing.md  threat-model.md
docs/release-notes/: 2.0.0.md  4.1.4.md
fovux-mcp/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  server.json  smithery.yaml
fovux-mcp/docs/: getting-started.md  integrations.md  security.md
fovux-mcp/docs/upgrade/: v2.md
fovux-mcp/src/fovux/: __init__.py  cli.py
fovux-mcp/src/fovux/core/: dataset_utils.py  json_io.py  processes.py  validation.py
fovux-mcp/src/fovux/http/: app.py  routes.py  tool_proxy.py
fovux-mcp/src/fovux/schemas/: common.py  management.py  training.py
fovux-mcp/src/fovux/tools/: export_onnx.py  run_archive.py  train_resume.py  train_start.py  train_stop.py
fovux-mcp/tests/: __init__.py  path_helpers.py
fovux-mcp/tests/integration/: test_real_server_smoke.py
fovux-mcp/tests/security/: test_http_security.py  test_path_traversal.py
fovux-mcp/tests/unit/: test_auth.py  test_cli.py  test_dataset_utils.py  test_dependency_boundaries.py  test_http_routes.py  test_metadata_sync.py  test_path_helpers.py  test_processes.py  test_tool_docs.py  test_train_worker.py  test_version_check.py
fovux-mcp/tests/unit/tools/: test_export.py  test_run_management.py  test_train.py
fovux-studio/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
fovux-studio/resources/walkthroughs/: 01-install-backend.md
fovux-studio/src/commands/: runActions.ts  walkthroughActions.ts
fovux-studio/src/webviews/: html.ts
fovux-studio/src/webviews/datasetInspector/: main.tsx
fovux-studio/src/webviews/exportWizard/: main.tsx
fovux-studio/src/webviews/trainingLauncher/: main.tsx
fovux-studio/test/suite/: fovuxClient.test.ts
pipelines/: mcp.yml  nightly.yml  slow.yml  studio.yml
scripts/: build_node_spdx_sbom.mjs  build_spdx_sbom.py  check_versions.py  lint_docs_code.py  pin-action-shas.sh  publish.sh  quality_gate.py  sync_labels.py  sync_mcp_metadata.py  validate_release_automation.mjs  verify-all-gaps.sh  verify_signatures.sh
